--- a/Hacks-for-HTML/index.html
+++ b/Hacks-for-HTML/index.html
@@ -9,17 +9,22 @@
 </head>
 <body>
    <div class="container">
-      <p>Texto em <mark>marcado</mark></p>
-      <p>Texto <s>riscado</s></p>
-      <p>Texto <ins>recém-inserido</ins></p>
-      <p>Texto <u>sublinhado</u></p>
-      <p>Texto <small>pequeno</small></p>
-      <p>Texto <em>itálico</em></p>
+      <p>Texto com <b>bold</b></p>
       <p>Texto <strong>encorpado</strong></p>
+      <p>Texto <i>itálico</i></p>
+      <p>Texto <em>Emphasized</em></p>
+      <p>Texto <s>riscado</s></p>
+      <p>Texto <u>sublinhado</u></p>
+      <p>Texto em <mark>marcado</mark> como marca texto</p>
+      <p>Texto <small>pequeno</small></p>
+      <p>Texto <del>inserido</del></p>
+      <p>Texto <ins>recém-inserido</ins></p>
+      <p>Texto <sub>subscrito</sub></p>
+      <p>Texto <sup>sobrescrito</sup></p>
    </div>
 
    <div class="container">
-      <abbr title="Mongo, Express, React, Node">MERN</abbr>
+      <abbr title="Mongo, Express, React, Node">MERN - Texto com tooltip</abbr>
    </div>
    <hr>
    <br><br><br>
